Dark mode UI fixes

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -341,7 +341,7 @@ h4, .h4 {
 }
 .rst__rowContents{
   background-color: #212631;
-  border: 1px solid #2a303d;
+  border: 1px solid #4d515a;
 }
 .supplyplanformulas {
   color: #e4e5e6 !important;
@@ -1392,6 +1392,17 @@ a {
   z-index: 2 !important;
   position: sticky !important;
   background: transparent !important;
+}
+.MuiSvgIcon-root {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
+  color: #fff;
 }
 // .month-picker > .rmp-container .rmp-popup.light .rmp-pad .rmp-btn.select {
 //   background-color: #d3d3d3;
